# Abschlussprojekt

./: Laktat.py  Leistung.py  README.md  Test.py  Testnummer.py  automatische_id_generieren.py  bestehende_versuchsperson_anlegen.py  csv_hochladen.py  main.py  manuelle_eingabe.py  neue_Versuchsperson_anlegen.py  pyproject.toml  read_data.py  test_erfassung.py  versionen der main.py.py
Data/vp001/: vp001.json
Data/vp001/daten/: test_001_belastung.csv  test_001_erholung.csv  test_002_belastung.csv  test_002_erholung.csv  vp001_Test1_Belastung.csv
Data/vp002/: vp002.json
Data/vp002/daten/: test_001_belastung.csv  test_001_erholung.csv  test_002_belastung.csv  test_002_erholung.csv  vp002_Test1_Belastung.csv  vp002_Test1_Erholung.csv
Data/vp003/: vp003.json
