[project]
name = "Abschlussprojekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "J-u-lia", email = "j.roessler@mci4me.at"},
    {name = "zs2641", email = "zs2641@mci4me.at"},
]
dependencies = [
    "streamlit>=1.46.0",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "plotly>=6.1.2",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
